# Projet-Synthese-Images

./: .gitignore  CMakeLists.txt  README.md  Tortue.cpp  Tortue.h  main.cpp
Primitives/: Cube.cpp  Cube.h  Cylindre.cpp  Cylindre.h  Point.h  Sphere.cpp  Sphere.h
